plugins {
    id 'java'
    id "io.spring.dependency-management" version "1.1.0"
    id "org.springframework.boot" version "3.0.2"
}

group 'com.swms'
version '1.0-SNAPSHOT'

allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'jacoco'

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }
    repositories {
        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
        mavenCentral()
    }
}

subprojects {
    sourceCompatibility = 17
    targetCompatibility = 17
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'

    test {
        useJUnitPlatform()
        ignoreFailures = true
    }

    // 这个里面的东西就是所有的子项目都要用的，当然，如果子项目不想用的话，也可以排除掉
    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.26'
        annotationProcessor 'org.projectlombok:lombok:1.18.26'
        testCompileOnly 'org.projectlombok:lombok:1.18.26'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
    }

    dependencyManagement {
        imports {
            mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2022.0.1'
        }

        imports {
            mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
        }

        resolutionStrategy {
            cacheChangingModulesFor 0, 'seconds'
        }

        dependencies {


            /******************************** Spring 相关依赖 ***********************/
            dependency group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.0.2'
            dependency group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '3.0.2'
            dependency group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.0.2'


            /********************************  使用apache dubbo starter **************/
            dependency 'org.apache.dubbo:dubbo-spring-boot-starter:3.1.7'
            dependency group: 'com.alibaba.cloud', name: 'spring-cloud-starter-alibaba-nacos-config', version: '2022.0.0.0-RC1'
            dependency group: 'com.alibaba.cloud', name: 'spring-cloud-starter-alibaba-nacos-discovery', version: '2020.0.RC1'


            /******************************** 依赖工具*******************************/
            dependency group: 'org.projectlombok', name: 'lombok', version: '1.18.26'
            dependency group: 'com.google.guava', name: 'guava', version: '31.1-jre'

            dependency group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
            dependency group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
            dependency group: 'org.apache.commons', name: 'commons-pool2', version: '2.11.1'
            dependency group: 'org.apache.commons', name: 'commons-text', version: '2.1.1'
            dependency group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
            dependency group: 'org.apache.commons', name: 'commons-compress', version: '1.21'

            dependency group: 'commons-codec', name: 'commons-codec', version: '1.15'
            dependency group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
            dependency group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'

            /******************************** 依赖swagger*******************************/
            dependency group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
            dependency group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
            dependency group: 'io.swagger.core.v3', name: 'swagger-models', version: '2.2.8'
            dependency group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.2.8'

            dependency 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.0'

            /********************************  fluent dependency *******************************/
            dependency group: 'org.fluentd', name: 'fluent-logger', version: '0.7.0'
            dependency 'com.sndyuk:logback-more-appenders:1.8.4'


            /********************************  mapstruct *******************************/
            dependency group: 'org.mapstruct', name: 'mapstruct', version: '1.5.3.Final'
            dependency group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.3.Final'
            dependency group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.2.0'
            dependency group: 'org.redisson', name: 'redisson-spring-boot-starter', version: '3.19.3'


            /********************************  工具类 *******************************/
            dependency group: 'org.apache.skywalking', name: 'apm-toolkit-logback-1.x', version: '8.14.0'


            /********************************  导入导出功能用 *******************************/
            dependency group: 'cn.afterturn', name: 'easypoi-web', version: '4.4.0'

            /*数据库相关配置*/
            dependency 'com.baomidou:mybatis-plus-boot-starter:3.5.3.1'
            dependency 'com.mysql:mysql-connector-j:8.0.32'
            dependency 'com.clickhouse:clickhouse-jdbc:0.4.1'
            dependency 'org.springframework.boot:spring-boot-starter-data-elasticsearch:3.0.2'

            /*MQ*/
            dependency 'org.springframework.cloud:spring-cloud-starter-stream-kafka:4.0.1'

            /********************************  powermock *******************************/
            dependency 'org.powermock:powermock-module-junit4:2.0.9'
            dependency 'org.powermock:powermock-api-mockito2:2.0.9'
            dependency 'org.powermock:powermock-module-junit4-rule:2.0.9'
            dependency 'org.powermock:powermock-classloading-xstream:2.0.9'
        }

    }

}

test {
    useJUnitPlatform()
}
